@@ -1,3 +1,12 @@
+2007-10-26  Jens Granseuer  <jensgr@gmx.net>
+
+	Patch by: Iain Holmes <iain@gnome.org>
+
+	* gsd-media-keys-window.c: (fade_timeout), (hide_timeout),
+	(remove_hide_timeout), (add_hide_timeout), (on_expose_event),
+	(gsd_media_keys_window_init): gradually fade out the OSD when composited
+	(bug #490593)
+
 2007-10-16  Sergey Udaltsov <svu@gnome.org>
 
 	* gnome-settings-keyboard-xkb.c: no more "configuration changed"
